infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - pathType: Prefix
            path: '/api/gateway/?(.*)'
            backend:
              service:
                name: apigateway-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: '/api/auth/?(.*)'
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
